P16.13: learn author-check, authoring API and page
